--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,14 @@
-certifi
-chardet
-click
 Flask
-idna
-itsdangerous
-Jinja2
+sklearn
+pandas
+numpy
+matplotlib
+gunicorn
+click
 joblib
 jsonify
-MarkupSafe
-numpy
 requests
 scikit-learn
 scipy
-sklearn
-threadpoolctl
-urllib3
-Werkzeug
-wincertstore
-gunicorn
+
+
